# econirl

./: .gitignore  CLAUDE.md  Makefile  README.md  REVIEW_TASK_3_NUMERICAL_HESSIAN.md  compare_estimators_dgp.py  compare_mce_nfxp.py  debug_expected_features.py  debug_mce_irl.py  debug_mce_irl_deeper.py  debug_mce_irl_grid.py  debug_mce_irl_summary.py  debug_mce_step.py  debug_mce_step2.py  debug_mce_step3.py  debug_quick.py  e2e_results.txt  final_comparison.py  mpec_vs_nfxp_results.json  nnes_vs_nfxp_results.json  pyproject.toml  quick_comparison.py  sees_vs_nfxp_results.json  test_correct_evaluation.py  test_improvements.py  test_improvements2.py  test_mce_fix.py  test_mce_normalized.py  test_mce_small_lr.py  test_mce_tqdm.py  test_mce_with_init.py  test_minimal.py  test_quick_compare.py  test_single_exp.py  verify_gradient_at_true.py
docs/: benchmark_cache.pt  case_studies.md  conf.py  counterfactuals.rst  eda_feasibility.md  estimator_comparisons.md  estimator_guide.md  estimators.md  estimators_guide_page.md  gaps_and_workplan.md  generate_mdp_schematics.py  generate_readme_figures.py  generate_scaling_figures.py  index.rst  loading_data.rst  quickstart.rst  references.rst  scaling_benchmark.csv  scaling_report.md  sml_benchmark.csv  summary_of_data_for_ddc_irl.md  unified_formulations.md
examples/: ddc_maxent_equivalence.py  gcl_comparison.ipynb  landing_demo.py  max_margin_bus_example.py  mce_irl_bus_demo.py  mce_irl_bus_example.ipynb  mce_irl_bus_example.py  nfxp_bus_demo.py  nfxp_vs_mceirl_comparison.ipynb  rust_1987_replication.ipynb  rust_bus_replication.ipynb  rust_bus_replication.py  shanghai_route_choice.py  taxi_gridworld.py  trivago_search_ddc.py
experiments/: known_truth.py
papers/: FOUNDATIONAL_PAPERS.md  each_algo_needs_a_tex_file.md  lsw_algorithm.aux
scripts/: counterfactual_docs_outputs.py  download_rdw.py  download_rust_data.py  generate_gym_expert_data.py
tests/: CLAUDE.md  __init__.py  conftest.py  test_appendix_metrics.py  test_behavioral_cloning.py  test_categories.py  test_ccp_wrapper.py  test_counterfactuals.py  test_demand_function.py  test_deprecation_warnings.py  test_estimator_protocol.py  test_eth_ucy.py  test_evaluation_inference.py  test_f_irl.py  test_four_estimator_benchmark.py  test_gcl.py  test_geolife.py  test_gladius.py  test_gridworld.py  test_iq_learn.py  test_keane_wolpin.py  test_known_truth.py  test_landing_demo.py  test_max_margin_irl_core.py  test_max_margin_planning_core.py  test_mce_irl_core.py  (+29 more)
(+584 files in other folders)
