[project]
name = "econirl"
version = "0.0.4"
description = "Behavioral inference. IRL and DDC with standard errors."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pranjal Rawat" }
]
keywords = [
    "econometrics",
    "inverse-reinforcement-learning",
    "discrete-choice",
    "structural-estimation",
    "dynamic-programming",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "equinox>=0.11",
    "optax>=0.2",
    "optimistix>=0.0.7",
    "lineax>=0.0.5",
    "gymnasium>=0.29",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.14",
    "nbsphinx>=0.9",
    "sphinx-copybutton>=0.5",
    "myst-parser>=2.0",
    "ipykernel",
]

[project.urls]
Homepage = "https://github.com/rawatpranjal/econirl"
Documentation = "https://econirl.readthedocs.io"
Repository = "https://github.com/rawatpranjal/econirl"
Issues = "https://github.com/rawatpranjal/econirl/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/econirl"]

[tool.hatch.build.targets.sdist]
include = [
    "src/econirl/",
    "tests/",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "CLAUDE.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: unit tests for individual modules",
    "contract: public API contract tests (sklearn protocol)",
    "numerical: parameter recovery and numerical accuracy tests",
    "packaging: import and install smoke tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
